<?xml version="1.0" encoding="utf-8"?>
<!--
/*
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for Latin keyboard  -->
    <string name="ime_name">Slide Keyboard</string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    
    <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>

    <!-- Popup keys for qwerty keys -->
    <string name="popup_2">áàâåäãąæćčç</string>
    <string name="popup_3">ďéèêěëę</string>
    <string name="popup_4">íìîïı</string>
    <string name="popup_5">ł</string>
    <string name="popup_6">ńňñóòôöõøœ</string>
    <string name="popup_7">ř§śšß</string>
    <string name="popup_8">ťúùûůü</string>
    <string name="popup_9">ýÿźžż</string>

    <!-- Labels for subtype -->
    <string name="label_subtype_generic">%s</string>

    <!-- Titles for ImePreference -->
    <string name="settings_name">Slide Keyboard Settings</string>
    <string name="language_selection_title">Input languages</string>
    <string name="select_language">Select input languages</string>
    <string name="general_category">General</string>

    <string-array name="swipePercentages">
        <item name="2">2%</item>
        <item name="3">3%</item>
        <item name="5">5%</item>
        <item name="7">7%</item>
        <item name="13">13%</item>
    </string-array>

    <string-array name="swipePercentageValues">
        <item name="0.02">0.02</item>
        <item name="0.03">0.03</item>
        <item name="0.05">0.05</item>
        <item name="0.07">0.07</item>
        <item name="0.13">0.13</item>
    </string-array>
</resources>
